2011-04-27  Michael Bell <michael.bell@web.de>
  * Released 0.11.beta5
  * Fixed an inconsistency in the naming conventions of the new
    functions.

2011-04-19  Michael Bell <michael.bell@web.de>
  * Released 0.11.beta4
  * Added option -a to xml2wbxml (anonymous format). The public ID is
    set to unknown and the DTD is not included.

2011-04-14  Michael Bell <michael.bell@web.de>
  * Released 0.11.beta3
  * Some defines were added again to support the old libwbxml 0.9.2
    interface. This fixes mainly some names of parameter types.
    You can compile libsyncml like follows:
    CFLAGS="-I/usr/local/include/libwbxml-1.0/wbxml" cmake . -B/tmp/build/libsyncml
  * If the XML root element must be used to identify the WBXML language
    then the name space is scanned before the root element itself.
    All SyncML versions use the same root element. Nevertheless it is
    better to set the document type correctly.
  * Fixed literal tag encoding. The element name and not the namespace
    must be encoded.
  * Added ActiveSync support with Microsoft's original namespaces.

2011-01-25  Michael Bell <michael.bell@web.de>
  * Released 0.11.beta2
  * The WBXML converter interface is now more robust in terms of new
    parameters and binary downward compatibility.
  * Added workaround for Nokia bug. Some Nokia software does not only
    encode the name space in the public ID. It also stores the name
    space in the root element as an attribute with an attribute name
    as literal reference zero but without a string table and the name
    space as an inline string.
    (Example: 04 00 03 string 00 => LITERAL index[0] STR_I string \0)
  * Every enum element has a fixed number.
  * Fixed SO-naming.

2011-01-20  Michael Bell <michael.bell@web.de>
  * Released 0.11.beta1
  * Changed the location of the header files including the installation
    path to support several versions of the library at the same host
  * Header files are installed to separate directory wbxml/