@@ -1,3 +1,8 @@
+  * Fixed usage of strncasecmp and location of a variable definition
+    (changes from ticket #73).
+    This fixes some compiler errors from MS VisualStudio C++ 2010.
+    The patch was supplied by Boaz Yaniv.
+
 2011-04-27  Michael Bell <michael.bell@web.de>
   * Released 0.11.beta5
   * Fixed an inconsistency in the naming conventions of the new
